Fix contributiosn style on mobile

--- a/app/assets/stylesheets/documents.scss
+++ b/app/assets/stylesheets/documents.scss
@@ -5,3 +5,11 @@
 .container {
   padding: 60px;
 }
+
+body.phone.contributions_new {
+
+  form {
+    padding: 0px 40px;
+  }
+
+}
